Feature/update to 420 latest (#23)
Merge Trino version 420 changes.
Update Iceberg Hadoop catalog to work with code refactoring in trino 420,
See Trino release notes for details: https://trino.io/docs/current/release/release-420.html