@@ -37,20 +37,24 @@ import static org.testng.Assert.assertTrue;
 public class TestJsonCassandraHandles
 {
     private static final Map<String, Object> TABLE_HANDLE_AS_MAP = ImmutableMap.of(
-            "schemaName", "cassandra_schema",
-            "tableName", "cassandra_table",
-            "clusteringKeyPredicates", "");
+            "relationHandle", ImmutableMap.of(
+                    "@type", "named",
+                    "schemaName", "cassandra_schema",
+                    "tableName", "cassandra_table",
+                    "clusteringKeyPredicates", ""));
 
     private static final Map<String, Object> TABLE2_HANDLE_AS_MAP = ImmutableMap.of(
-            "schemaName", "cassandra_schema",
-            "tableName", "cassandra_table",
-            "partitions", List.of(
-                    ImmutableMap.of(
-                            "key", "a2V5",
-                            "partitionId", "partitionKey1 = 11 AND partitionKey2 = 22",
-                            "tupleDomain", ImmutableMap.of("columnDomains", Collections.emptyList()),
-                            "indexedColumnPredicatePushdown", true)),
-            "clusteringKeyPredicates", "clusteringKey1 = 33");
+            "relationHandle", ImmutableMap.of(
+                    "@type", "named",
+                    "schemaName", "cassandra_schema",
+                    "tableName", "cassandra_table",
+                    "partitions", List.of(
+                            ImmutableMap.of(
+                                    "key", "a2V5",
+                                    "partitionId", "partitionKey1 = 11 AND partitionKey2 = 22",
+                                    "tupleDomain", ImmutableMap.of("columnDomains", Collections.emptyList()),
+                                    "indexedColumnPredicatePushdown", true)),
+                    "clusteringKeyPredicates", "clusteringKey1 = 33"));
 
     private static final Map<String, Object> COLUMN_HANDLE_AS_MAP = ImmutableMap.<String, Object>builder()
             .put("name", "column")
@@ -97,7 +101,7 @@ public class TestJsonCassandraHandles
     public void testTableHandleSerialize()
             throws Exception
     {
-        CassandraTableHandle tableHandle = new CassandraTableHandle("cassandra_schema", "cassandra_table");
+        CassandraTableHandle tableHandle = new CassandraTableHandle(new CassandraNamedRelationHandle("cassandra_schema", "cassandra_table"));
 
         assertTrue(OBJECT_MAPPER.canSerialize(CassandraTableHandle.class));
         String json = OBJECT_MAPPER.writeValueAsString(tableHandle);
@@ -108,7 +112,7 @@ public class TestJsonCassandraHandles
     public void testTable2HandleSerialize()
             throws Exception
     {
-        CassandraTableHandle tableHandle = new CassandraTableHandle("cassandra_schema", "cassandra_table", PARTITIONS, "clusteringKey1 = 33");
+        CassandraTableHandle tableHandle = new CassandraTableHandle(new CassandraNamedRelationHandle("cassandra_schema", "cassandra_table", PARTITIONS, "clusteringKey1 = 33"));
         assertTrue(OBJECT_MAPPER.canSerialize(CassandraTableHandle.class));
         String json = OBJECT_MAPPER.writeValueAsString(tableHandle);
         testJsonEquals(json, TABLE2_HANDLE_AS_MAP);
@@ -120,7 +124,7 @@ public class TestJsonCassandraHandles
     {
         String json = OBJECT_MAPPER.writeValueAsString(TABLE_HANDLE_AS_MAP);
 
-        CassandraTableHandle tableHandle = OBJECT_MAPPER.readValue(json, CassandraTableHandle.class);
+        CassandraNamedRelationHandle tableHandle = (OBJECT_MAPPER.readValue(json, CassandraTableHandle.class)).getRequiredNamedRelation();
 
         assertEquals(tableHandle.getSchemaName(), "cassandra_schema");
         assertEquals(tableHandle.getTableName(), "cassandra_table");
@@ -134,7 +138,7 @@ public class TestJsonCassandraHandles
     {
         String json = OBJECT_MAPPER.writeValueAsString(TABLE2_HANDLE_AS_MAP);
 
-        CassandraTableHandle tableHandle = OBJECT_MAPPER.readValue(json, CassandraTableHandle.class);
+        CassandraNamedRelationHandle tableHandle = (OBJECT_MAPPER.readValue(json, CassandraTableHandle.class)).getRequiredNamedRelation();
 
         assertEquals(tableHandle.getSchemaName(), "cassandra_schema");
         assertEquals(tableHandle.getTableName(), "cassandra_table");
