@@ -26,7 +26,6 @@ import java.util.Map;
 
 import static com.google.common.collect.Iterables.getOnlyElement;
 import static io.trino.plugin.hive.HiveConfig.HIVE_VIEWS_ENABLED;
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class TestIcebergPlugin
@@ -40,16 +39,29 @@ public class TestIcebergPlugin
     }
 
     @Test
+    public void testTestingFileMetastore()
+    {
+        ConnectorFactory factory = getConnectorFactory();
+        factory.create(
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "TESTING_FILE_METASTORE",
+                                "hive.metastore.catalog.dir", "/tmp"),
+                        new TestingConnectorContext())
+                .shutdown();
+    }
+
+    @Test
     public void testThriftMetastore()
     {
         ConnectorFactory factory = getConnectorFactory();
 
         factory.create(
-                "test",
-                Map.of(
-                        "iceberg.catalog.type", "HIVE_METASTORE",
-                        "hive.metastore.uri", "thrift://foo:1234"),
-                new TestingConnectorContext())
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "HIVE_METASTORE",
+                                "hive.metastore.uri", "thrift://foo:1234"),
+                        new TestingConnectorContext())
                 .shutdown();
 
         // Ensure Glue configuration isn't bound when Glue not in use
@@ -82,11 +94,11 @@ public class TestIcebergPlugin
         ConnectorFactory factory = getConnectorFactory();
 
         factory.create(
-                "test",
-                Map.of(
-                        "iceberg.catalog.type", "glue",
-                        "hive.metastore.glue.region", "us-east-1"),
-                new TestingConnectorContext())
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "glue",
+                                "hive.metastore.glue.region", "us-east-1"),
+                        new TestingConnectorContext())
                 .shutdown();
 
         assertThatThrownBy(() -> factory.create(
@@ -98,12 +110,12 @@ public class TestIcebergPlugin
                 .hasMessageContaining("Error: Configuration property 'hive.metastore.uri' was not used");
 
         factory.create(
-                "test",
-                Map.of(
-                        "iceberg.catalog.type", "glue",
-                        "hive.metastore.glue.catalogid", "123",
-                        "hive.metastore.glue.region", "us-east-1"),
-                new TestingConnectorContext())
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "glue",
+                                "hive.metastore.glue.catalogid", "123",
+                                "hive.metastore.glue.region", "us-east-1"),
+                        new TestingConnectorContext())
                 .shutdown();
     }
 
@@ -114,12 +126,12 @@ public class TestIcebergPlugin
 
         // recording with thrift
         factory.create(
-                "test",
-                Map.of(
-                        "iceberg.catalog.type", "HIVE_METASTORE",
-                        "hive.metastore.uri", "thrift://foo:1234",
-                        "hive.metastore-recording-path", "/tmp"),
-                new TestingConnectorContext())
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "HIVE_METASTORE",
+                                "hive.metastore.uri", "thrift://foo:1234",
+                                "hive.metastore-recording-path", "/tmp"),
+                        new TestingConnectorContext())
                 .shutdown();
 
         // recording with glue
@@ -131,6 +143,16 @@ public class TestIcebergPlugin
                         "hive.metastore-recording-path", "/tmp"),
                 new TestingConnectorContext()))
                 .hasMessageContaining("Configuration property 'hive.metastore-recording-path' was not used");
+
+        // recording with nessie
+        assertThatThrownBy(() -> factory.create(
+                "test",
+                Map.of(
+                        "iceberg.catalog.type", "nessie",
+                        "hive.metastore.nessie.region", "us-east-2",
+                        "hive.metastore-recording-path", "/tmp"),
+                new TestingConnectorContext()))
+                .hasMessageContaining("Configuration property 'hive.metastore-recording-path' was not used");
     }
 
     @Test
@@ -139,13 +161,13 @@ public class TestIcebergPlugin
         ConnectorFactory connectorFactory = getConnectorFactory();
 
         connectorFactory.create(
-                "test",
-                ImmutableMap.<String, String>builder()
-                        .put("iceberg.catalog.type", "HIVE_METASTORE")
-                        .put("hive.metastore.uri", "thrift://foo:1234")
-                        .put("iceberg.security", "allow-all")
-                        .buildOrThrow(),
-                new TestingConnectorContext())
+                        "test",
+                        ImmutableMap.<String, String>builder()
+                                .put("iceberg.catalog.type", "HIVE_METASTORE")
+                                .put("hive.metastore.uri", "thrift://foo:1234")
+                                .put("iceberg.security", "allow-all")
+                                .buildOrThrow(),
+                        new TestingConnectorContext())
                 .shutdown();
     }
 
@@ -155,13 +177,13 @@ public class TestIcebergPlugin
         ConnectorFactory connectorFactory = getConnectorFactory();
 
         connectorFactory.create(
-                "test",
-                ImmutableMap.<String, String>builder()
-                        .put("iceberg.catalog.type", "HIVE_METASTORE")
-                        .put("hive.metastore.uri", "thrift://foo:1234")
-                        .put("iceberg.security", "read-only")
-                        .buildOrThrow(),
-                new TestingConnectorContext())
+                        "test",
+                        ImmutableMap.<String, String>builder()
+                                .put("iceberg.catalog.type", "HIVE_METASTORE")
+                                .put("hive.metastore.uri", "thrift://foo:1234")
+                                .put("iceberg.security", "read-only")
+                                .buildOrThrow(),
+                        new TestingConnectorContext())
                 .shutdown();
     }
 
@@ -189,17 +211,17 @@ public class TestIcebergPlugin
         ConnectorFactory connectorFactory = getConnectorFactory();
         File tempFile = File.createTempFile("test-iceberg-plugin-access-control", ".json");
         tempFile.deleteOnExit();
-        Files.write(tempFile.toPath(), "{}".getBytes(UTF_8));
+        Files.writeString(tempFile.toPath(), "{}");
 
         connectorFactory.create(
-                "test",
-                ImmutableMap.<String, String>builder()
-                        .put("iceberg.catalog.type", "HIVE_METASTORE")
-                        .put("hive.metastore.uri", "thrift://foo:1234")
-                        .put("iceberg.security", "file")
-                        .put("security.config-file", tempFile.getAbsolutePath())
-                        .buildOrThrow(),
-                new TestingConnectorContext())
+                        "test",
+                        ImmutableMap.<String, String>builder()
+                                .put("iceberg.catalog.type", "HIVE_METASTORE")
+                                .put("hive.metastore.uri", "thrift://foo:1234")
+                                .put("iceberg.security", "file")
+                                .put("security.config-file", tempFile.getAbsolutePath())
+                                .buildOrThrow(),
+                        new TestingConnectorContext())
                 .shutdown();
     }
 
@@ -209,12 +231,12 @@ public class TestIcebergPlugin
         ConnectorFactory factory = getConnectorFactory();
 
         assertThatThrownBy(() -> factory.create(
-                "test",
-                Map.of(
-                        "iceberg.catalog.type", "HIVE_METASTORE",
-                        HIVE_VIEWS_ENABLED, "true",
-                        "hive.metastore.uri", "thrift://foo:1234"),
-                new TestingConnectorContext())
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "HIVE_METASTORE",
+                                HIVE_VIEWS_ENABLED, "true",
+                                "hive.metastore.uri", "thrift://foo:1234"),
+                        new TestingConnectorContext())
                 .shutdown())
                 .isInstanceOf(ApplicationConfigurationException.class)
                 .hasMessageContaining("Configuration property 'hive.hive-views.enabled' was not used");
@@ -243,9 +265,25 @@ public class TestIcebergPlugin
                         "test",
                         Map.of(
                                 "iceberg.catalog.type", "jdbc",
+                                "iceberg.jdbc-catalog.driver-class", "org.postgresql.Driver",
                                 "iceberg.jdbc-catalog.connection-url", "jdbc:postgresql://localhost:5432/test",
                                 "iceberg.jdbc-catalog.catalog-name", "test",
                                 "iceberg.jdbc-catalog.default-warehouse-dir", "s3://bucket"),
+                        new TestingConnectorContext())
+                .shutdown();
+    }
+
+    @Test
+    public void testNessieCatalog()
+    {
+        ConnectorFactory factory = getConnectorFactory();
+
+        factory.create(
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "nessie",
+                                "iceberg.nessie-catalog.default-warehouse-dir", "/tmp",
+                                "iceberg.nessie-catalog.uri", "http://foo:1234"),
                         new TestingConnectorContext())
                 .shutdown();
     }
